# venvat

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  build.bat  clean.py  pycahce_cleaner.py  pyproject.toml  setup.py  update_version.py
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: publish.yml
docs/: index.md  setup.md  usage.md
scripts/: venvat.ps1
src/: main.py  venvat.ps1
src/venvat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
venvat/: __init__.py  main.py  venvat_runner.py
venvat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
