[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venvat"
version = "0.1.1"
description = "A script to activate Python virtual environments."
readme = "README.md"

authors = [
  {name = "Kelocker", email = "thekelvin0fficials@gmail.com"}
]
license = {text = "MIT"}
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
venvat = "src.main:main"

[project.urls]
Homepage = "https://github.com/Kelocker/venvat.git"
Issues = "https://github.com/Kelocker/venvat.git/issues"
